<resources>
    <string name="app_name">ODC_Android</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Default values -->
    <string name="list_title">Listado de </string>
    <string name="search_text">Ingrese termino</string>
    <string name="search_button">Buscar</string>
    <string name="not_found">No existen coincidencias</string>
    <string name="collection_name">Collection Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="count_track">Tracks: 999</string>
    <string name="price">USD 100.00</string>

    <string-array name="options_array">
        <item>Albumes</item>
        <item>Canciones</item>
    </string-array>

</resources>
