<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:focusable="true"
    android:clickable="true"
    android:background="?android:attr/selectableItemBackground"
    android:weightSum="1"
    android:layout_height="100dp">

    <ImageView
        android:id="@+id/iv_cover"
        android:layout_width="0dp"
        android:layout_weight="0.15"
        android:layout_gravity="center"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.6"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_collection"
            android:layout_width="fill_parent"
            android:layout_weight="0.5"
            android:layout_height="0dp"
            android:lines="1"
            android:ellipsize="end"
            android:text="@string/collection_name"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textSize="15dp" />
        <TextView
            android:id="@+id/tv_artist"
            android:layout_width="fill_parent"
            android:layout_weight="0.5"
            android:layout_height="0dp"
            android:lines="1"
            android:ellipsize="end"
            android:text="@string/artist_name"
            android:gravity="center_vertical"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="0.25"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_track"
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:layout_height="0dp"
            android:text="@string/count_track"
            android:gravity="center" />
        <TextView
            android:id="@+id/tv_price"
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:layout_height="0dp"
            android:text="@string/price"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>