<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:gravity="center"
            android:text="@string/list_title"
            android:textSize="20dp" />
        <Spinner
            android:id="@+id/spn_options"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:weightSum="1">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.75">
            <EditText
                android:id="@+id/et_search"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/edit_text_style"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="false"
                android:hint="@string/search_text"
                android:layout_marginLeft="10dp"
                android:gravity="center" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/search_button"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:id="@+id/tv_not_found"
        android:text="@string/not_found"
        android:visibility="gone"
        android:gravity="center"
        android:textSize="30sp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:id="@+id/lv_albums">
    </ListView>

</LinearLayout>
